css/about.css
#about {

}

#about .container {
    max-width: 1240px;
    margin-left: auto;
    margin-right: auto;
}

/* ========== About ========= */

#about #who-we-are {
    margin-top: 120px;
    margin-bottom: 120px;
    text-align: center;
}

#about #who-we-are .head {
    margin: 0 auto;
    width: 940px;
}

#about #who-we-are .head .title {
    font-size: 48px;
    font-weight: bold;
    margin: 0 auto;
    margin-bottom: 32px;
}

#about #who-we-are .head .desc {
    font-size: 18px;
    margin: 0 auto;
}

#about #who-we-are .left-side {
    width: 60%;
}

#about #who-we-are .right-side {
    width: 50%;
    height: 400px;
}

#about #who-we-are .right-side img {
    height: 400px;
}

/* ========== Leadership ========= */

#about #leadership .title {
    font-size: 48px;
    font-weight: bold;
    margin: 0 auto;
    margin-bottom: 8px;
    text-align: center;
}

#about #leadership .desc {
    text-align: center;
    margin-bottom: 32px;
}

#about #leadership .leaders {
    display: flex;
    justify-content: center;
}

#about #leadership .leaders .leader {
    flex: 0.5;
    max-width: calc(50% - 24px);
    margin: 0 6px;
    overflow: hidden;
}

#about #leadership .leaders .leader .img {
    margin-bottom: 12px;
    display: flex;
}

#about #leadership .leaders .leader .img img {
    width: 450px;
    height: 500px;
    margin-left: auto;
    margin-right: auto;
}

#about #leadership .leaders .leader .desc .name {
    font-size: 20px;
    text-align: center;
    font-weight: bold;
    margin-bottom: 4px;
}

#about #leadership .leaders .leader .desc .role {
    text-align: center;
}

/* ========== Mission ========= */

#about #our-mission {
    margin-bottom: 60px;
}

#about #our-mission .right-side {
    width: 60%;
}

#about #our-mission .left-side {
    width: 50%;
    height: 400px;
}

#about #our-mission .left-side img {
    height: 400px;
}

/* ========== Vision ========= */

#about #our-vision {
    margin-bottom: 120px;
}

#about #our-vision .left-side {
    width: 60%;
}

#about #our-vision .right-side {
    width: 50%;
    height: 400px;
}

#about #our-vision .right-side img {
    height: 400px;
}

/* ============== Presence ============== */
#about .presence-row {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    margin-bottom: 60px;
}

#about .presence-row .presence-card {
    flex: 0.25;
    margin: 16px;
    padding: 16px;
}

#about .presence-row .presence-card .presence-showcase {
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
}

#about .presence-row .presence-card .presence-content {
    text-align: center;
    padding: 8px;
    margin-top: 32px;
}

#about .presence-row .presence-card .content-head {
    font-size: 38px;
    font-weight: bold;
    color: #2F2F2F;
    margin: 0 auto;
    margin-bottom: 12px;
}

